Fix h1 font size on mobile

--- a/styles.css
+++ b/styles.css
@@ -199,16 +199,16 @@ input:focus:invalid {
   .wrapper {
     flex-direction: column;
     align-items: center;
-  }
-
-  .hero {
-    max-height: 20rem;
     overflow: hidden;
   }
 
-  .logo-bar {
+  .hero {
     width: 100vw;
-    font-size: 10px;
+    max-height: 20rem;
+  }
+
+  .hero h1 {
+    font-size: 3rem;
   }
   .main {
     width: 100%;
